app/styles/app.scss
/** 
* @see https://github.com/passwordcockpit/frontend for the canonical source repository 
* @copyright Copyright (c) 2018 Blackpoints AG (https://www.blackpoints.ch) 
* @license https://github.com/passwordcockpit/frontend/blob/master/LICENSE.md BSD 3-Clause License 
*/

/* CONTENT
***********************************************************************************
***********************************************************************************
- variable
- import
- base
- layout (@import)
- growl (@import)
- tooltip
- grid
- power select
- table
- tags
- loading (@import)
- header
- table
- form
	- password generator
	- error
- list (@import)
- search
- login (@import)
- content
    - password PIN alert
    - password content
	- permissions
    - log
- error page    
- media (@import)
***********************************************************************************/

/* Variable
*********************************************************************************/
$highlight: #eee;
$header-height: 50px;
$global-search-height: 65px;
$padding: 15px;
$border-color: #e7e7e7;

/* bootstrap */
$bootstrap-sass-asset-helper: false;
$logoHeight: 35px;
$ray-darker: lighten(#000, 13.5%);
$gray-dark: lighten(#000, 20%);
$gray: lighten(#000, 33.5%);
$gray-light: #db901b;
$gray-lighter: lighten(#000, 93.5%);
$gray-lightest: lighten(#000, 97.25%);
$brand-primary: #db901b;
$brand-success: #1da41d;
$brand-info: #5bc0de;
$brand-warning: #f0ad4e;
$brand-danger: #d9534f;
$weekend: #e2e2e2;

/* Import
*********************************************************************************/
@import "bootstrap/variables";
@import "bootstrap";
@import "sb-admin-2";
$fa-font-path: "/fonts/" !default;
//@import "../../node_modules/font-awesome/scss/font-awesome.scss";

@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
@import "node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
@import "node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
@import "node_modules/@fortawesome/fontawesome-free/scss/brands.scss";


/* Base
*********************************************************************************/
.logo {
    height: $logoHeight;
}

.align-right {
    text-align: right;
}

.align-center {
    text-align: center;
}

.red {
    color: $brand-danger;
}

.green {
    color: $brand-success;
}

h1 {
    color: $brand-primary;
}

.panel-default > .panel-heading,
.title {
    margin: 0;
    border-bottom: 1px solid $border-color;
    height: 44px;
    padding: 10px $padding;
    font-size: 14px;
    line-height: 21px;
    font-weight: normal;
    background: $gray-light;
    color: #fff;
}

.btn-group {
    .btn {
        margin: 0 5px 0 0;

        &:last-child {
            margin-right: 0;
        }
    }
}
.alert:last-child{
    margin-bottom: 0
}
/* Layout
*********************************************************************************/
@import "layout";

/* growl 
*********************************************************************************/
@import "growl";

/* tooltip
*********************************************************************************/
.btn-tooltip{
    position: absolute;
    top: 0;
    right: -2px;
}
.tooltip{
    width: 200px;
    .tooltip-inner{
        text-align: left;
        padding: 10px;

    }
}
/* alert 
*********************************************************************************/
p.alert{
    & > .fas{
        font-size: 2rem;
        margin: 0 5px 0 0;
    }
}
/* grid 
*********************************************************************************/
@for $i from 1 through 100 {
    .grid-#{$i}0 {
        width: 10px * $i;
    }
}

/* table 
*********************************************************************************/
@-moz-document url-prefix() { /* firefox fix */
    fieldset {
        display: table-cell;
    }
}

/* task 
*********************************************************************************/
ul.tags {
    list-style: none;
    padding: 0;

    li {
        margin: 0 4px 4px 0;
        padding: 5px 10px;
        float: left;
        background: $gray-lighter;
        border-radius: 3px;
    }
}

/* header
*********************************************************************************/
.navbar {
    li {
        a {
            color: #000;

            &.active {
                background: #eee;
            }

            &:hover {
                color: $brand-primary;
            }
        }
    }
}

/* table
*********************************************************************************/
.table {
    margin: 0;

    ul:not(.tags) {
        padding-left: 15px;
        margin: 0;
    }
}

/* form
*********************************************************************************/
textarea {
    resize: vertical;
}

textarea.form-control,
input.form-control,
select.form-control,
.select2-container--bootstrap .select2-selection {
    font-size: 12px;
}

.select2-container--bootstrap .select2-selection {
    line-height: 20px;
}

input:invalid {
    border: 1px solid $state-danger-text;
}

input.number {
    max-width: 200px;
}

.input-group-btn {
    i {
        height: 19px;
    }

    button {
        height: 35px;
    }
}
#icons-wormhole{
    .ember-power-select-option{
        width: 50px;
        float: left;
        line-height: 50px;
        text-align: center;
    }
}


/* password generator */
.password-generator,
.password-options-btn {
    cursor: pointer;
}

.password-generator {
    border-left: 0;
}
.password-encrypt-form,
.password-options-form {
    margin-top: 10px;
    display: none;
}

/* error */
.errors-list{
    padding: 10px;
    background: $state-danger-text;
    color: #fff;
    border-radius: 5px;
    position: relative;
    z-index: 1000;
    font-size: 10px;
    margin: 10px 0 0;
    p{
        border: 0;
        margin: 0 0 5px; 
        &:last-child{
            margin-bottom: 0;
        }
    }
    &::after {
        content: " ";
        position: absolute;
        bottom: 100%; /* At the bottom of the tooltip */
        left: 20px;
        margin-left: -7px;
        border-width: 7px;
        border-style: solid;
        border-color:  transparent transparent $state-danger-text  transparent;
    }
}
ul.list{
    .errors-list{
        margin: 0;
        position: absolute;
        top: 110%;
    }
}
.folder-permissions-container {
    .btn-primary {
        width: 100%;
    }
}

/* loading */
@import "loading";

/* list
*********************************************************************************/
@import "list";

/* search 
*********************************************************************************/
.search{
	#search-target{
        width: 35%;
        border-radius: 0;
        -webkit-appearance: none; 
        border-left: 0;
        border-right: 0;
	}
	&.global-search{
		input.form-control{
			width: 65%;
		}
	}
}
.result{
	a{
		color: #000;
		&:hover{
			color: $brand-primary;
		}
    }
    .fa {
        width: 1em;
    }
}
td.path{
	a{
		width: auto;
		padding: 5px;
		float: left;
		background: #eee;
		border-radius: 3px;
		margin-right: 5px;
	}
	span{
		padding: 5px;
		float: left;
		margin-right: 5px;
	}
}

/* login
*********************************************************************************/
@import "login";

/* content
*********************************************************************************/
.password-container {
    background: #fff;
}
/* password PIN alert */
.alert-pin{
    padding-left: 100px;
    position: relative;
    & > i.fas{
        position: absolute;
        top: 20px;
        left: 20px;
        font-size: 4.5rem;
    }
}
/* password content */
.blur {
    color: transparent;
    text-shadow: 0 0 12px rgba(0, 0, 0, 0.5); 
}
.action{
    margin: 0 0 0 5px;
    float: right;
}
.select-password {
    float: right;
    padding: 1px 6px;
    margin-right: 5px;
    color: #9F9F9F;
}
.file-container{
    padding-top: 8px;
}
.buttons-container{ 
    display: block; 
    float: right;
}
.password-read-container{
    padding-right: 70px !important;
    position: relative;
    .buttons-container{
        position: absolute;
        top: 5px;
        right: 2px;
        width: 70px;
    }
}
.table-password-content{ 
    th{
        width: 140px;
    }
    td{
        max-width: 0;
        overflow: hidden;
        text-overflow: ellipsis;
        }
}

/* permissions */
.folder-permissions-container {
    background: #fff;
}

/* log */
.log-container {
    background: #fff;
}

.folder-permissions {
    margin-bottom: 0;
}

/* error page
*********************************************************************************/
.error-page{
    text-align: center;
    padding: 10vh;
    i{
        font-size: 10rem;
        margin-bottom: 50px;
    }
    h1{
        margin: 0 0 20px 0;   
        color: $text-color;
    }
}


.profile-container{
    width: 100%;
    padding: 15px;
}
/* media
*********************************************************************************/
@media screen and (max-width: $screen-sm-max) {
    @import "mobile";
}

@media screen and (min-width: $screen-md-min) {
    @import "desktop";
}

@import "ember-power-select";

